--- a/cita-executor/Cargo.toml
+++ b/cita-executor/Cargo.toml
@@ -17,24 +17,24 @@ itertools = "0.5"
 
 core-executor = { path = "./core" }
 common-types = { path = "../cita-chain/types" }
-cita-types = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-cita-directories = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-hashable = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-util = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-pubsub = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-libproto = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-error =  { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-proof = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-jsonrpc-types = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
+cita-types = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+cita-directories = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+hashable = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+util = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+pubsub = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+libproto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+error =  { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+proof = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+jsonrpc-types = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
 cita-database = "0.1"
 
 [build-dependencies]
-util = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
+util = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
 
 [dev-dependencies]
 bincode = "0.8.0"
-cita-ed25519 = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-cita-crypto = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
+cita-ed25519 = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+cita-crypto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
 tempdir = "0.3.7"
 
 [dependencies.cita-vm]
