--- a/cita-executor/core/Cargo.toml
+++ b/cita-executor/core/Cargo.toml
@@ -37,21 +37,21 @@ hasher = { version="0.1" }
 
 common-types = { path = "../../cita-chain/types" }
 core = { path = "../../cita-chain/core" }
-cita-merklehash = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-snappy = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-hashable = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-util = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-rlp = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-libproto = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-proof = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-jsonrpc-types = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
+cita-merklehash = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+snappy = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+hashable = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+util = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+rlp = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+libproto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+proof = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+jsonrpc-types = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
 cita-database = "0.1"
 
-cita-ed25519 = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-cita-secp256k1 = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-cita-types = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-cita-crypto = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-cita-crypto-trait = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
+cita-ed25519 = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+cita-secp256k1 = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+cita-types = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+cita-crypto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+cita-crypto-trait = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
 
 [dependencies.cita-vm]
 git = "https://github.com/citahub/cita-vm.git"
