--- a/cita-jsonrpc/Cargo.toml
+++ b/cita-jsonrpc/Cargo.toml
@@ -16,12 +16,12 @@ serde_json = "1.0"
 dotenv = "0.13.0"
 clap = "2"
 cita-logger = "0.1.1"
-util = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-error = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-pubsub = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-libproto = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-jsonrpc-types = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-jsonrpc-proto = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
+util = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+error = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+pubsub = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+libproto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+jsonrpc-types = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+jsonrpc-proto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
 http = "0.1"
 httparse = "1.0"
 bytes = "0.4"
@@ -38,7 +38,7 @@ tokio = "0.1.13"
 tokio-executor = "0.1.5"
 
 [build-dependencies]
-util = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
+util = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
 
 [features]
 default = ["secp256k1", "sha3hash", "rabbitmq"]
