--- a/cita-network/Cargo.toml
+++ b/cita-network/Cargo.toml
@@ -6,16 +6,16 @@ license = "Apache-2.0"
 edition = "2018"
 
 [dependencies]
-tentacle-discovery = { version = "0.2.9", features = ["molc"] }
-tentacle = { version = "0.2.7", features = ["molc"] }
+tentacle-discovery = { git = "https://github.com/nervosnetwork/tentacle.git", rev = "bb46378", features = ["molc"] }
+tentacle = { version = "0.6.1", features = ["molc"] }
 tokio = "0.1.14"
 futures = "0.1.25"
 cita-logger = "0.1.1"
-cita-types = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-util = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-libproto = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-pubsub = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-jsonrpc-types = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
+cita-types = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+util = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+libproto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+pubsub = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+jsonrpc-types = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
 serde = "1.0.84"
 serde_json = "1.0"
 serde_derive = "1.0.84"
@@ -31,7 +31,7 @@ notify = "4.0.10"
 tempfile = "3.0.5"
 
 [build-dependencies]
-util = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
+util = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
 
 [features]
 default = ["secp256k1", "sha3hash", "rabbitmq"]
