--- a/tests/chain-executor-mock/Cargo.toml
+++ b/tests/chain-executor-mock/Cargo.toml
@@ -14,13 +14,13 @@ rustc-serialize = "0.3"
 dotenv = "0.13.0"
 bincode = "0.8.0"
 cita-logger = "0.1.0"
-libproto = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-cita-types = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-cita-crypto = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-hashable = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-proof = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-rlp = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-pubsub = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
+libproto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+cita-types = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+cita-crypto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+hashable = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+proof = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+rlp = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+pubsub = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
 
 [features]
 default = ["secp256k1", "sha3hash", "rabbitmq"]
