--- a/tools/create-genesis/Cargo.toml
+++ b/tools/create-genesis/Cargo.toml
@@ -18,8 +18,8 @@ libsecp256k1 = "0.2.2"
 clap = "2.33.0"
 cita_trie = "2.0"
 
-libproto = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-cita-types = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
+libproto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+cita-types = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
 
 [dependencies.cita-vm]
 git = "https://github.com/citahub/cita-vm.git"
