--- a/tools/snapshot-tool/Cargo.toml
+++ b/tools/snapshot-tool/Cargo.toml
@@ -10,10 +10,10 @@ dotenv = "0.13.0"
 clap = "2"
 fs2 = "0.4.3"
 cita-logger = "0.1.0"
-util = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-pubsub = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-libproto = { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
-error =  { git = "https://github.com/citahub/cita-common.git", branch = "develop" }
+util = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+pubsub = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+libproto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+error =  { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
 
 [features]
 default = ["secp256k1", "sha3hash", "rabbitmq"]
