--- a/cita-auth/Cargo.toml
+++ b/cita-auth/Cargo.toml
@@ -12,19 +12,19 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 cita-logger = "0.1.1"
-cita-types = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-cita-directories = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-util = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-error = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-pubsub = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-libproto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-cita-crypto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-tx_pool = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-jsonrpc-types = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+cita-types = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+cita-directories = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+util = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+error = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+pubsub = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+libproto = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+cita-crypto = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+tx_pool = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+jsonrpc-types = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
 uuid = { version = "0.7", features = ["v4"] }
 lru = "0.1"
 rayon = "1.2"
-hashable = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+hashable = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
 cita-database = "0.1"
 
 [dev-dependencies]
@@ -33,7 +33,7 @@ tempdir = "0.3.7"
 quickcheck = "0.7.2"
 
 [build-dependencies]
-util = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+util = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
 
 [features]
 default = ["secp256k1", "sha3hash", "rabbitmq"]
