--- a/cita-chain/core/Cargo.toml
+++ b/cita-chain/core/Cargo.toml
@@ -16,19 +16,19 @@ crossbeam = "0.2"
 cita-logger = "0.1.1"
 common-types = { path = "../types" }
 
-libproto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-cita-ed25519 = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-cita-secp256k1 = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-cita-types = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-cita-crypto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-cita-merklehash = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-hashable = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-proof = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-jsonrpc-types = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-rlp = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-util = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+libproto = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+cita-ed25519 = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+cita-secp256k1 = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+cita-types = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+cita-crypto = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+cita-merklehash = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+hashable = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+proof = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+jsonrpc-types = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+rlp = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+util = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
 cita-database = "0.1"
-pubsub = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+pubsub = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
 
 [dev-dependencies]
 rand = "0.3"
