--- a/tests/chain-performance-by-mq/Cargo.toml
+++ b/tests/chain-performance-by-mq/Cargo.toml
@@ -10,16 +10,16 @@ serde = "1.0"
 serde_derive = "1.0"
 clap = "2"
 cita-logger = "0.1.0"
-libproto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+libproto = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
 rustc-serialize = "0.3"
-cita-types = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-cita-crypto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-hashable = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+cita-types = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+cita-crypto = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+hashable = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
 dotenv = "0.13.0"
-proof = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+proof = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
 bincode = "0.8.0"
 cpuprofiler = "0.0.3"
-pubsub = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+pubsub = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
 
 [dev-dependencies]
 common-types = { path = "../../cita-chain/types" }
