--- a/tools/create-key-addr/Cargo.toml
+++ b/tools/create-key-addr/Cargo.toml
@@ -6,8 +6,8 @@ license = "Apache-2.0"
 edition = "2018"
 
 [dependencies]
-cita-crypto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-hashable = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+cita-crypto = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+hashable = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
 
 [features]
 default = ["secp256k1", "sha3hash"]
