--- a/tools/relayer-parser/Cargo.toml
+++ b/tools/relayer-parser/Cargo.toml
@@ -10,15 +10,15 @@ cita-logger = "0.1.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-cita-types = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+cita-types = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
 clap = "2"
 parking_lot = "0.6"
 hyper = "0.13"
 tokio = { version = "0.2", features = ["full"] }
 core = { path = "../../cita-chain/core" }
-jsonrpc-types = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-libproto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
-cita-crypto = { https://github.com/ChengyuZhu6/cita-common, branch = "main" }
+jsonrpc-types = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+libproto = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
+cita-crypto = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
 ethabi = "4.2.0"
 
 [features]
