--- a/cita-network/Cargo.toml
+++ b/cita-network/Cargo.toml
@@ -6,8 +6,7 @@ license = "Apache-2.0"
 edition = "2018"
 
 [dependencies]
-tentacle-discovery = { git = "https://github.com/nervosnetwork/tentacle.git", rev = "bb46378", features = ["molc"] }
-tentacle = { version = "0.6.1", features = ["molc"] }
+tentacle = { version = "0.6.1" }
 tokio = "0.1.14"
 futures = "0.1.25"
 cita-logger = "0.1.1"
