--- a/cita-chain/types/Cargo.toml
+++ b/cita-chain/types/Cargo.toml
@@ -28,7 +28,7 @@ proof = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main
 cita-database = "0.1"
 
 [dependencies.cita-vm]
-git = "https://github.com/citahub/cita-vm.git"
+git = "https://github.com/ChengyuZhu6/cita-vm.git"
 branch = "cita"
 default-features = false
 features = ["sha3hash"]
