--- a/cita-executor/Cargo.toml
+++ b/cita-executor/Cargo.toml
@@ -38,7 +38,7 @@ cita-crypto = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch =
 tempdir = "0.3.7"
 
 [dependencies.cita-vm]
-git = "https://github.com/citahub/cita-vm.git"
+git = "https://github.com/ChengyuZhu6/cita-vm.git"
 branch = "cita"
 default-features = false
 features = ["sha3hash"]
