--- a/cita-executor/core/Cargo.toml
+++ b/cita-executor/core/Cargo.toml
@@ -54,7 +54,7 @@ cita-crypto = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch =
 cita-crypto-trait = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch = "main" }
 
 [dependencies.cita-vm]
-git = "https://github.com/citahub/cita-vm.git"
+git = "https://github.com/ChengyuZhu6/cita-vm.git"
 branch = "cita"
 default-features = false
 features = ["sha3hash"]
