--- a/tests/json-test/Cargo.toml
+++ b/tests/json-test/Cargo.toml
@@ -23,7 +23,7 @@ cita-crypto = { git = "https://github.com/ChengyuZhu6/cita-common.git", branch =
 cita_trie = "2.0"
 
 [dependencies.cita-vm]
-git = "https://github.com/citahub/cita-vm.git"
+git = "https://github.com/ChengyuZhu6/cita-vm.git"
 branch = "cita"
 default-features = false
 features = ["sha3hash"]
