--- a/cita-network/Cargo.toml
+++ b/cita-network/Cargo.toml
@@ -6,8 +6,8 @@ license = "Apache-2.0"
 edition = "2018"
 
 [dependencies]
-tentacle = { version = "0.6.1" }
-tentacle-discovery = "0.2.9"
+tentacle = { version = "0.2.7", features = ["molc"] }
+tentacle-discovery = { version = "0.2.9", features = ["molc"] }
 tokio = "0.1.14"
 futures = "0.1.25"
 cita-logger = "0.1.1"
